# solo-collisions

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  polynom_codegen.cpp  rohans_test-cg.cpp  segment_segment_distance.cpp
